<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView14"
        style="@style/TextView.High"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/ic_sample_user"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp"
        android:background="@drawable/shape_rectangle_red_half_radius"
        android:orientation="vertical"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView16"
            style="@style/TextView.High.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/halo_villa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView18"
            style="@style/TextView.Normal.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView16"
            android:text="@string/ada_yang_bisa_kami_bantu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/linear_menu_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView18"
            android:layout_marginTop="28dp">

            <LinearLayout
                android:id="@+id/menu_blog"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rectangle_white"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_blogging" />

                <TextView
                    style="@style/TextView.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:gravity="center"
                    android:text="@string/blog" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_profil"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rectangle_white"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_user" />

                <TextView
                    style="@style/TextView.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:gravity="center"
                    android:text="@string/profil" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_menu_top"
            android:layout_marginTop="14dp">

            <LinearLayout
                android:id="@+id/menu_lainnya"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rectangle_white"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_other" />

                <TextView
                    style="@style/TextView.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:gravity="center"
                    android:text="@string/lainnya" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_keluar"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rectangle_white"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_logout" />

                <TextView
                    style="@style/TextView.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:gravity="center"
                    android:text="@string/keluar" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:scaleType="matrix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_wallet" />

</androidx.constraintlayout.widget.ConstraintLayout>